# pystitcher

./: .coveragerc  .editorconfig  .gitignore  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: conf.py  index.rst
src/pystitcher/: _version.py  bookmark.py  skeleton.py  stitcher.py
tests/: 2.md  2page.md  3.md  book-clean.md  book-external-url.md  book-flatten.md  book-headings.md  book-keep.md  book-page-select.md  book-rotate.md  conftest.py  min.md  test_cli.py  test_integration.py  test_skeleton.py  title.md
