[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pystitcher"
dynamic = ["version"]
description = "Stitch together a PDF file from multiple sources in a declarative manner"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Nemo", email = "python@captnemo.in" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]
dependencies = [
    "html5lib>=1.1",
    "importlib-metadata; python_version<\"3.8\"",
    "Markdown>=3.6",
    "pypdf>=4.3.1",
    "validators>=0.33.0",
]

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "setuptools",
]

[project.scripts]
pystitcher = "pystitcher.skeleton:run"

[project.urls]
Changelog = "https://github.com/captn3m0/pystitcher/blob/main/CHANGELOG.md"
Documentation = "https://github.com/captn3m0/pystitcher/wiki"
Homepage = "https://github.com/captn3m0/pystitcher"
Source = "https://github.com/captn3m0/pystitcher"
Tracker = "https://github.com/captn3m0/pystitcher/issues"

[tool.hatch.version]
source = "vcs"
[tool.hatch.build.hooks.vcs]
version-file = "src/pystitcher/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.envs.default]
installer = "uv"
